--- a/cama/index.html
+++ b/cama/index.html
@@ -128,37 +128,64 @@
               fill="none"
               stroke="black"
             />
-          <g class="lip-upper hidden">
+            <g class="lip-upper hidden">
+              <path
+                d="M70.3309 192.82C69.1225 193.152 64.7925 190.277 62.7785 188.797C61.6909 189.352 61.3184 186.161 61.268 184.497C62.3253 185.283 66.2224 186.883 73.3519 186.994C82.2638 187.132 83.4722 185.052 84.5295 185.468C85.3754 185.801 90.6218 183.295 93.1393 182C93.6932 184.682 92.7466 190.434 84.5295 191.987C74.2582 193.929 71.8414 192.403 70.3309 192.82Z"
+                fill="#FF5A5A"
+                stroke="black"
+              />
+              <path
+                d="M64.8482 177.358C61.2393 178.284 61.0388 182.562 61.3897 184.585C62.0413 184.971 65.0888 185.944 72.0659 186.753C80.7873 187.765 83.9451 185.308 85.1481 185.742C86.1104 186.089 90.9623 183.285 93.268 181.839C92.7668 180.008 91.1328 176.694 88.6066 178.081C85.4488 179.816 80.0355 177.937 79.2836 178.081C78.5318 178.226 69.3593 176.202 64.8482 177.358Z"
+                fill="white"
+                stroke="black"
+              />
+              <path d="M66 177V186" stroke="black" />
+              <path
+                d="M59.268 179C58.4347 181.833 57.168 187.7 58.768 188.5"
+                stroke="black"
+              />
+              <path
+                d="M95.268 179C96.4347 182 98.168 188.1 95.768 188.5"
+                stroke="black"
+              />
+              <path d="M69.9949 177L69.929 186.309" stroke="black" />
+              <path d="M73.9949 177L73.929 186.309" stroke="black" />
+              <path d="M77.9174 177.786L77.929 186.309" stroke="black" />
+              <path d="M82 178L81.929 186.309" stroke="black" />
+              <path d="M86.1486 178.523L85.8717 185.741" stroke="black" />
+              <path d="M90.0403 177.449L89.696 183.999" stroke="black" />
+            </g>
+            <g class="lip-12 hidden">
+              <path
+                d="M98 180C99.3958 180.754 101.886 182.609 100.68 184"
+                stroke="#232323"
+              />
+              <path
+                d="M58 181C56.4316 181.44 53.7652 182.656 55.6473 184"
+                stroke="#232323"
+              />
+            </g>
 
-            <path d="M70.3309 192.82C69.1225 193.152 64.7925 190.277 62.7785 188.797C61.6909 189.352 61.3184 186.161 61.268 184.497C62.3253 185.283 66.2224 186.883 73.3519 186.994C82.2638 187.132 83.4722 185.052 84.5295 185.468C85.3754 185.801 90.6218 183.295 93.1393 182C93.6932 184.682 92.7466 190.434 84.5295 191.987C74.2582 193.929 71.8414 192.403 70.3309 192.82Z" fill="#FF5A5A" stroke="black"/>
-            <path d="M64.8482 177.358C61.2393 178.284 61.0388 182.562 61.3897 184.585C62.0413 184.971 65.0888 185.944 72.0659 186.753C80.7873 187.765 83.9451 185.308 85.1481 185.742C86.1104 186.089 90.9623 183.285 93.268 181.839C92.7668 180.008 91.1328 176.694 88.6066 178.081C85.4488 179.816 80.0355 177.937 79.2836 178.081C78.5318 178.226 69.3593 176.202 64.8482 177.358Z" fill="white" stroke="black"/>
-            <path d="M66 177V186" stroke="black"/>
-            <path d="M59.268 179C58.4347 181.833 57.168 187.7 58.768 188.5" stroke="black"/>
-            <path d="M95.268 179C96.4347 182 98.168 188.1 95.768 188.5" stroke="black"/>
-            <path d="M69.9949 177L69.929 186.309" stroke="black"/>
-            <path d="M73.9949 177L73.929 186.309" stroke="black"/>
-            <path d="M77.9174 177.786L77.929 186.309" stroke="black"/>
-            <path d="M82 178L81.929 186.309" stroke="black"/>
-            <path d="M86.1486 178.523L85.8717 185.741" stroke="black"/>
-            <path d="M90.0403 177.449L89.696 183.999" stroke="black"/>
-              </g>
-              <g class="lip-12 hidden">
-                <path d="M98 180C99.3958 180.754 101.886 182.609 100.68 184" stroke="#232323"/>
-                <path d="M58 181C56.4316 181.44 53.7652 182.656 55.6473 184" stroke="#232323"/>
-                
-
-              </g>
-
-              <g class="lip-14 hidden">
-                <path d="M103 180C104.396 180.754 106.886 182.609 105.68 184" stroke="#232323"/>
-                <path d="M53 181C51.4316 181.44 48.7652 182.656 50.6473 184" stroke="#232323"/>
-                <path d="M104 183C101.524 184.6 64.381 188.865 52 183" stroke="#232323"/>
-
-              </g>
-              <g class="lip-15 hidden">
-                <path d="M51 188C60.4723 184.671 84.3336 179.647 104 186.184" stroke="#232323"/>
-
-              </g>
+            <g class="lip-14 hidden">
+              <path
+                d="M103 180C104.396 180.754 106.886 182.609 105.68 184"
+                stroke="#232323"
+              />
+              <path
+                d="M53 181C51.4316 181.44 48.7652 182.656 50.6473 184"
+                stroke="#232323"
+              />
+              <path
+                d="M104 183C101.524 184.6 64.381 188.865 52 183"
+                stroke="#232323"
+              />
+            </g>
+            <g class="lip-15 hidden">
+              <path
+                d="M51 188C60.4723 184.671 84.3336 179.647 104 186.184"
+                stroke="#232323"
+              />
+            </g>
             <circle cx="107" cy="118" r="2" fill="black" />
 
             <circle cx="44" cy="118" r="2" fill="black" />
@@ -169,12 +196,17 @@
               stroke="black"
             />
             <path
-            fill="#FF7373"
+              fill="#FF7373"
               class="check-right"
               d="M118.952 138.773C115.928 134.416 108.84 128.318 104.691 138.773C99.5047 151.841 125.435 144.257 118.952 138.773Z"
               stroke="black"
             />
-            <path class="mouth-white hidden" d="M88 180H58C72.7541 173.521 65.8689 177.054 72.7541 175.287C78.2623 173.873 85.377 178.036 88 180Z" fill="white" stroke="black"/>
+            <path
+              class="mouth-white hidden"
+              d="M88 180H58C72.7541 173.521 65.8689 177.054 72.7541 175.287C78.2623 173.873 85.377 178.036 88 180Z"
+              fill="white"
+              stroke="black"
+            />
 
             <path
               class="lip"
@@ -192,14 +224,37 @@
               d="M85 161C86.8333 166.333 91.6 176.8 96 176"
               stroke="black"
             />
-            <path class="mouth3 hidden" d="M54 177.5C60.1667 178.333 72.6 179.5 73 177.5" stroke="black"/>
-            <path class="mouth4 hidden" d="M96 178C89.1842 178.755 75.4421 179.811 75 178" stroke="black"/>
-            <path class="mouth5 hidden" d="M99.5 178C102 179.833 106.2 184 103 186" stroke="black"/>
-            <path class="mouth6 hidden" d="M53 178C50.8519 179.833 47.2432 184 49.9927 186" stroke="black"/>
+            <path
+              class="mouth3 hidden"
+              d="M54 177.5C60.1667 178.333 72.6 179.5 73 177.5"
+              stroke="black"
+            />
+            <path
+              class="mouth4 hidden"
+              d="M96 178C89.1842 178.755 75.4421 179.811 75 178"
+              stroke="black"
+            />
+            <path
+              class="mouth5 hidden"
+              d="M99.5 178C102 179.833 106.2 184 103 186"
+              stroke="black"
+            />
+            <path
+              class="mouth6 hidden"
+              d="M53 178C50.8519 179.833 47.2432 184 49.9927 186"
+              stroke="black"
+            />
             <!-- <svg width="36" height="13" viewBox="0 0 36 13" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M1 1C7.38788 9.30086 23.1309 20.9221 35 1" stroke="black" stroke-width="2"/>
               </svg> -->
-              <ellipse  class="ell-mouth hidden" cx="75.5" cy="178" rx="10.5" ry="5" fill="white"/>
+            <ellipse
+              class="ell-mouth hidden"
+              cx="75.5"
+              cy="178"
+              rx="10.5"
+              ry="5"
+              fill="white"
+            />
 
             <defs>
               <filter
@@ -241,9 +296,14 @@
           </svg>
         </div>
       </div>
-      <div class="right_options"></div>
+      <div class="right_options">
+        <label for="left">left</label>
+        <input type="checkbox" name="option" id="left" />
+        <label for="right">right</label>
+        <input type="checkbox" name="option" id="right" />
+      </div>
     </div>
-
+    <div class="myClass2 myClass1">Text goes here</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <script src="./app.js"></script>
   </body>
